manifests/argo-rolllouts.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: app-rollout
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ai-planet
  template:
    metadata:
      labels:
        app: ai-planet
    spec:
      containers:
        - name: ai-planet
          image: rkvishnu77/ai-planet:latest
          ports:
            - containerPort: 3000
  strategy:
    canary:
      steps:
        - setWeight: 10
          pause:
            duration: 60s
        - setWeight: 20
          pause:
            duration: 60s
        - setWeight: 30
          pause:
            duration: 60s
        - setWeight: 100
      trafficRouting:
        istio:
          virtualService:
            name: app-virtual-service
