manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tetris-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ai-planet
  template:
    metadata:
      labels:
        app: ai-planet
    spec:
      containers:
        - name: ai-planet
          image: docker.io/rkvishnu77/ai-planet:latest
          ports:
            - containerPort: 3000
