manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ai-planet-service
spec:
  selector:
    app: ai-planet
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
